# neural-network-from-scratch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  Tobio_Santiago_Informe_TP3.ipynb  pyproject.toml  y_comp_pred.npy
archive/legacy_core/: plots.py
data/: X_COMP.npy  X_images.npy  y_images.npy
experiments/: __init__.py  pytorch_runner.py  runner.py
experiments/configs/: __init__.py  base_config.py  configurations.py  predefined.py  pytorch_configs.py
informe/: Tobio_Santiago_Informe_TP3.fdb_latexmk  Tobio_Santiago_Informe_TP3.fls  Tobio_Santiago_Informe_TP3.tex  template.aux  template.fdb_latexmk  template.fls
neural_net/: __init__.py  factory.py
neural_net/data/: __init__.py  cross_validation.py  dataset.py
neural_net/evaluation/: __init__.py  evaluator.py  metrics.py  robustness.py
neural_net/layers/: __init__.py  base.py  base_layer.py  ce_softmax.py  dropout.py  linear.py  relu.py
neural_net/models/: __init__.py  base_mlp.py  config.py  mlp.py  mlp_pytorch.py
neural_net/optimizers/: __init__.py  adam.py  base_optimizer.py  config.py  factory.py  sgd.py
neural_net/training/: __init__.py  config.py  early_stopping.py  factory.py  lr_schedulers.py  regularizers.py  trainer.py  trainer_pytorch.py
neural_net/utils/: __init__.py  logger.py  results_manager.py  training_helpers.py  visualization.py
notebooks/: Tobio_Santiago_Informe_TP3.ipynb  Tobio_Santiago_Notebook_TP3.ipynb
report/: Tobio_Santiago_Informe_TP3.tex  Tobio_Santiago_Report_TP3.tex  arxiv.sty  template_informe.tex
results/: m0_confusion_matrix.npy  m0_results.json  m1g_confusion_matrix.npy  m1g_results.json  m2_confusion_matrix.npy  m2_history.npz  m2_results.json  m3b_confusion_matrix.npy  m3b_results.json  robustness_analysis.json
results/M0/: m0_confusion_matrix.npy  m0_history.npz  m0_results.json  m0_weights.npz
results/M1/M1a/: m1a_confusion_matrix.npy  m1a_history.npz  m1a_results.json  m1a_weights.npz
results/M1/M1b/: m1b_confusion_matrix.npy  m1b_history.npz  m1b_results.json  m1b_weights.npz
results/M1/M1c/: m1c_confusion_matrix.npy  m1c_history.npz  m1c_results.json  m1c_weights.npz
results/M1/M1d/: m1d_confusion_matrix.npy  m1d_history.npz  m1d_results.json  m1d_weights.npz
results/M1/M1e/: m1e_confusion_matrix.npy  m1e_history.npz  m1e_results.json  m1e_weights.npz
results/M1/M1f/: m1f_history.npz  (+3 more)
scripts/: __init__.py  train.py
src/: config.py  data_processing.py  model_trainer.py  models.py  run_experiments.py
src/experiments/: config.py
src/optimizers/: __init__.py
src/training/: __init__.py  lr_schedulers.py
tests/: __init__.py
(+8 files in other folders)
